package shuffle + build tweaks to support java9