@@ -1,5 +1,6 @@
-package net.openhft.chronicle.core.cleaner.impl.jdk8;
+package net.openhft.chronicle.core.cleaner.impl.reflect;
 
+import net.openhft.chronicle.core.Jvm;
 import net.openhft.chronicle.core.cleaner.spi.ByteBufferCleanerService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -11,19 +12,32 @@ import java.nio.ByteBuffer;
 
 public final class ReflectionBasedByteBufferCleanerService implements ByteBufferCleanerService {
     private static final Logger LOGGER = LoggerFactory.getLogger(ReflectionBasedByteBufferCleanerService.class);
-    private static final String CLEANER_CLASS_NAME = "sun.misc.Cleaner";
+    private static final String JDK8_CLEANER_CLASS_NAME = "sun.misc.Cleaner";
+    private static final String JDK9_CLEANER_CLASS_NAME = "jdk.internal.ref.Cleaner";
 
     @Override
     public void clean(final ByteBuffer buffer) {
         final Method cleanerMethod;
         try {
             cleanerMethod = DirectBuffer.class.getDeclaredMethod("cleaner");
+            log("cleaner method: %s%n", cleanerMethod);
             final Object cleaner = cleanerMethod.invoke(buffer);
-            final Method cleanMethod = Class.forName(CLEANER_CLASS_NAME).getDeclaredMethod("clean");
+            log("cleaner: %s%n", cleaner);
+            final String cleanerClassname = Jvm.isJava9Plus() ? JDK9_CLEANER_CLASS_NAME : JDK8_CLEANER_CLASS_NAME;
+
+            log("cleaner class name: %s%n", cleanerClassname);
+            final Method cleanMethod = Class.forName(cleanerClassname).getDeclaredMethod("clean");
+            log("clean method: %s%n", cleanMethod);
+
             cleanMethod.invoke(cleaner);
         } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException | ClassNotFoundException e) {
             LOGGER.warn("Failed to clean buffer", e);
         }
+    }
+
+    private void log(final String fmt, final Object arg) {
+        System.out.printf(fmt, arg);
+        LOGGER.warn(String.format(fmt, arg));
     }
 
     @Override
